Section 6: advanced vue components

--- a/section-4-2-STARTER/index.html
+++ b/section-4-2-STARTER/index.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-  <div id="appCompiled">
-  </div>
-  <div id="appRuntime">
+  <div id="app">
+    <hello></hello>
+    <hello></hello>
+    <hello></hello>
+    <hello></hello>
   </div>
 
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
